[package]
name = "usagirust"
publish = false
version = "0.1.0"
edition = "2018"
authors = ["nayvcake <https://github.com/nayvcake>"]
include = ["src/**/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

